--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "bensampo/laravel-enum": "^6.2",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/mail": "*",
         "laravel/framework": "^9.19",
         "laravel/passport": "^11.5",
         "laravel/sanctum": "^3.0",
