--- a/.gitignore
+++ b/.gitignore
@@ -18,12 +18,4 @@ yarn-error.log
 /.vscode
 .env.example
 bootstrap/cache/
-storage/app/
-storage/app/public/
-storage/framework/
-storage/framework/cache/
-storage/framework/cache/data/
-storage/framework/sessions/
-storage/framework/testing/
-storage/framework/views/
-storage/logs/
+/storage
